@@ -138,6 +138,7 @@ struct _Eina_File
 
    Eina_Bool shared : 1;
    Eina_Bool delete_me : 1;
+   Eina_Bool global_faulty : 1;
 };
 
 typedef struct _Eina_File_Map Eina_File_Map;
@@ -151,6 +152,7 @@ struct _Eina_File_Map
    int refcount;
 
    Eina_Bool hugetlb : 1;
+   Eina_Bool faulty : 1;
 };
 
 static Eina_Hash *_eina_file_cache = NULL;
@@ -1210,4 +1212,91 @@ eina_file_map_free(Eina_File *file, void *map)
    eina_lock_release(&file->lock);
 }
 
+EAPI Eina_Bool
+eina_file_map_faulted(Eina_File *file, void *map)
+{
+   Eina_File_Map *em;
+
+   EINA_SAFETY_ON_NULL_RETURN_VAL(file, EINA_FALSE);
+
+   eina_lock_take(&file->lock);
+
+   if (file->global_map == map) return file->global_faulty;
+
+   em = eina_hash_find(file->rmap, &map);
+   if (!em) return EINA_FALSE;
+
+   return em->faulty;
+}
+
+EAPI Eina_Iterator *
+eina_file_xattr_get(Eina_File *file)
+{
+   EINA_SAFETY_ON_NULL_RETURN_VAL(file, NULL);
+
+   return eina_xattr_fd_ls(file->fd);
+}
+
+EAPI Eina_Iterator *
+eina_file_xattr_value_get(Eina_File *file)
+{
+   EINA_SAFETY_ON_NULL_RETURN_VAL(file, NULL);
+
+   return eina_xattr_value_fd_ls(file->fd);
+}
+
+void
+eina_file_mmap_faulty(void *addr, long page_size)
+{
+   Eina_File_Map *m;
+   Eina_File *f;
+   Eina_Iterator *itf;
+   Eina_Iterator *itm;
+
+   /* NOTE: I actually don't know if other thread are running, I will try to take the lock.
+      It may be possible that if other thread are not running and they were in the middle of
+      accessing an Eina_File this lock are still taken and we will result as a deadlock. */
+   eina_lock_take(&_eina_file_lock_cache);
+
+   itf = eina_hash_iterator_data_new(_eina_file_cache);
+   EINA_ITERATOR_FOREACH(itf, f)
+     {
+        Eina_Bool faulty = EINA_FALSE;
+
+        eina_lock_take(&f->lock);
+
+        if (f->global_map)
+          {
+             if ((unsigned char *) addr < (((unsigned char *)f->global_map) + f->length) &&
+                 (((unsigned char *) addr) + page_size) >= (unsigned char *) f->global_map)
+               {
+                  f->global_faulty = EINA_TRUE;
+                  faulty = EINA_TRUE;
+               }
+          }
+
+        if (!faulty)
+          {
+             itm = eina_hash_iterator_data_new(f->map);
+             EINA_ITERATOR_FOREACH(itm, m)
+               {
+                  if ((unsigned char *) addr < (((unsigned char *)m->map) + m->length) &&
+                      (((unsigned char *) addr) + page_size) >= (unsigned char *) m->map)
+                    {
+                       m->faulty = EINA_TRUE;
+                       faulty = EINA_TRUE;
+                       break;
+                    }
+               }
+             eina_iterator_free(itm);
+          }
+
+        eina_lock_release(&f->lock);
+
+        if (faulty) break;
+     }
+   eina_iterator_free(itf);
+
+   eina_lock_release(&_eina_file_lock_cache);
+}
 
