@@ -136,5 +136,7 @@ void eina_log_threads_init(void);
 void eina_log_threads_shutdown(void);
 #endif
 
+void eina_file_mmap_faulty(void *addr, long page_size);
+
 #endif /* EINA_PRIVATE_H_ */
 
